syntax = "proto3";

option go_package = "github.com/XWS-Dislinkt-Developers/Dislinkt-backend/common/authentication";

package authentication;

import "google/api/annotations.proto";

service AuthenticationService{
        rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        	option (google.api.http) = {
			get: "/users"
		};
        }
        rpc Register(RegisterRequest) returns (RegisterResponse) {
                option (google.api.http) = {
                        post: "/register"
                        body:"user"
              };
        }
        rpc Login(LoginRequest) returns (LoginResponse) {
                option (google.api.http) = {
                  post: "/login"
                    body: "userData"
                };
        }
        rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}


// Register

message UserData{
        string username = 1;
        string password = 2;
}

message RegisterRequest {
        UserData user=1;
}
      
message RegisterResponse {
        int64 status = 1;
        string error = 2;
}
      
// Login
      
message LoginRequest {
        UserData userData = 1;
}
      
message LoginResponse {
        int64 status = 1;
        string error = 2;
        string token = 3;
        string username=4;
}
      
// Validate
      
message ValidateRequest {
         string token = 1;
}
      
message ValidateResponse {
        int64 status = 1;
        string error = 2;
        string userId = 3;
}

//Test
message GetAllRequest {
}

message GetAllResponse {
        repeated User users = 1;
}

message User {
        string id = 1;
        string name = 2;
        string username = 3;
        string password = 4;
        string email = 5;
        string address = 6;
        string gender = 7;
}
